# shellvars

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  setup.cfg
shellvars/: __init__.py
shellvars/tests/: __init__.py  test_shellvars.py
