[metadata]
name = shellvars
summary = Evaluator for common shell variable expressions
home-page = https://github.com/testing-cabal/shellvars
description-file = README.rst
author = Robert Collins
author-email = robertc@robertcollins.net
classifier = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[extras]
test =
  docutils
  hypothesis
  testscenarios
  testtools

[files]
packages = shellvars

[bdist_wheel]
universal = 1
